# rust-raytracing-engine

./: .gitignore  Cargo.toml
src/: app.rs  camera.rs  color.rs  engine.rs  lib.rs  main.rs  random.rs  ray.rs  renderer.rs  scene.rs  vec3.rs
src/common/: mod.rs
src/rt/: color.rs  ray.rs  vec3.rs
src/utils/: mod.rs
