[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# vulkano = "0.33.0"
# vulkano-win = "0.33.0"
# winit = "0.28.6"
# minifb = "0.24.0"
# sdl2 = { version = "0.35.2", features = ["bundled"]}
ash = { version = "0.37", default-features = false, features = ["debug", "linked"] }
ash-window = "0.12"
imgui = { version = "0.11.0", features = ["docking"] }
imgui-rs-vulkan-renderer = "1.9.0"
imgui-winit-support = { version = "0.11.0" }
raw-window-handle = "0.5"
log = "0.4"
simple_logger = "4.0"
winit = { version = "0.27.5", features = ["x11"] }
