[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# vulkano = "0.33.0"
# vulkano-win = "0.33.0"
# winit = "0.28.6"
# minifb = "0.24.0"
# sdl2 = { version = "0.35.2", features = ["bundled"]}
# ash = { version = "0.37", default-features = false, features = ["debug", "linked"] }
# ash-window = "0.12"
imgui = { version = "0.11.0", features = ["docking"] }
glow = "0.12.0"
memoffset = "0.6.4"
imgui-winit-support = { version = "0.11.0" }
imgui-glow-renderer = "0.11.0"
glutin = "0.29.1"
raw-window-handle = "0.5"
log = "0.4"
simple_logger = "4.0"
winit = { version = "0.27.5", features = ["x11"] }
image = "0.23"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rayon = "1.7.0"

[features]
# Features here are used to opt-out of compiling code that depends on certain
# OpenGL features. If the features are enabled, the renderer will check that the
# feature is supported before attempting to use it. Only opt-out of any of these
# if you are certain you will only target platforms that lack the corresponding
# feature.
default = ["gl_extensions_support", "debug_message_insert_support", "bind_vertex_array_support", "vertex_offset_support", "clip_origin_support", "bind_sampler_support", "polygon_mode_support", "primitive_restart_support"]
# Enable checking for OpenGL extensions
gl_extensions_support = []
# Support for `gl.debug_message_insert`
debug_message_insert_support = []
# Support for `glBindVertexArray`
bind_vertex_array_support = []
# Support for `glDrawElementsBaseVertex`
vertex_offset_support = []
# Support for `GL_CLIP_ORIGIN`
clip_origin_support = []
# Support for `glBindSampler`
bind_sampler_support = []
# Support for `glPolygonMode`
polygon_mode_support = []
# Support for `GL_PRIMITIVE_RESTART`
primitive_restart_support = []
